# urbandictionary_be

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
project/: .coverage  coverage.xml  pytest.ini  runserver.sh
project/posts/: admin.py  forms.py  models.py  sitemaps.py  urls.py  views.py
project/posts/migrations/: 0001_initial.py  0002_rename_post_name_post_post_title.py  0002_userverificationtoken.py  0003_rename_publisher_post_author.py  0003_rename_token_userverificationtoken_value.py  0004_rename_downvotes_post_dislike_count_and_more.py  0005_alter_domain.py  0006_blockedemaildomain.py  0007_spamregex.py  0008_alter_spamregex_options_spamregex_description.py  0009_remove_postunverified_verification_token_and_more.py
project/posts/services/: blocked_email_domains.py  spam_detection.py  verification.py
project/posts/templates/: account.html  change_password.html  create_post.html  feed.html  header.html  login.html  register.html
project/project/: settings.py  urls.py
project/static/css/: style.css
project/static/js/: navigation.js  reaction.js
project/tests/: test_views.py
